feat: Qwen-Agent Desktop - native AI assistant with EXE packaging
- Full SPA frontend (chat, discover, tools, document parsing, recording, PPT, AV)
- aiohttp backend with SSE streaming to OpenAI-compatible APIs
- 20+ built-in tool cards with category filtering and search
- Ephemeral tool chats that don't pollute conversation history
- Dark mode, i18n (zh/en), responsive design
- PyInstaller build script for standalone EXE
- Security: API keys via environment variables (QWEN_API_KEY)
- Docs moved to docs/ folder
- Hardware auto-detection module for GPU/CPU optimization

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
 env
+.env
+.env.*
+!.env.example
 *.pyc
 __pycache__
+.venv/
 
 .idea
 .vscode
 .DS_Store
 *.ipynb_checkpoints
+
+# PyInstaller
+build/
+dist/
+*.spec
+*.ico
 
 qwen_agent/llm/gpt.py
 qwen_agent/llm/tools.py
